5/23/2001
	- Automatically determining name servers didn't work on Windows 2000.

4/13/2001
	- Converting a Name to a String does proper character escaping.

4/7/2001
	- 1.2.0 released

3/21/2001
	- Only cache relevant data from answers.
	- Cache negative responses more correctly.

3/14/2001
	- Handle TTLs greater than 2^31.

3/10/2001
	- Performance and memory improvements to the Name object.

3/7/2001
	- Performance improvements to TypeMap (used by Zone and Cache).

3/6/2001
	- Lots of standards compliance related fixes.

3/4/2001
	- Improved class handling.
	- A few minor CNAME related fixes.

2/27/2001
	- Referrals weren't returned correctly from jnamed.

1/15/2001
	- Fix some signed/unsigned printing issues for KEY records
	  (Pasi Eronen <pe@iki.fi>)
	- Add routines to generate SIG(0) message signatures
	  (Pasi Eronen <pe@iki.fi>)

1/8/2001
	- Add support for unknown RR types & classes.

12/3/2000
	- The target in an MX record can be compressed.

11/18/2000
	- Add jnamed.conf example to USAGE

8/27/2000
	- 1.1.6 released
	- The high level api wasn't properly initialized.
	  (Christopher Fitch <cfitch@sbti.com>)
	- Added a routine to build a SIG record based on the results of
	  a DSA signature (Pasi Eronen <pe@iki.fi>)
	
8/13/2000
	- Added 'clear' command to update client
	- Removed some deprecated code

8/8/2000
	- Invalid binary labels were not always rejected
	- SRV initialization didn't work (reported by Chuck Santos
	  <csantos@netnumber.com>)
	- jnamed failed if no Cache was specified
	- The Zone object didn't handle zones with no NS records.
	- Added support for the NAPTR record (Chuck Santos
	  <csantos@netnumber.com>)

7/17/2000
	- 1.1.5 released
	- CERT records were printed with a negative keytag half the time.
	  (reported by Jakob Schlyter <jakob@crt.se>).
	- Printing a KEY record prints the key id.
	  (Jakob Schlyter <jakob@crt.se>)

6/25/2000
	- A Cache now contains a thread that periodically removes expired
	  data.

6/4/2000